Added permission's check for interns in appointments, changed gets to post, added endpoint for the last finished appointments for the accountants.
